--- a/background.tex
+++ b/background.tex
@@ -17,14 +17,14 @@
 	
 		\begin{enumerate}
 			\item bilinear: for all $u,u' \in \Gzero$ and $v,v' \in \Gone$ we have
-				$$
+				\begin{equation}
 					e(u \cdot u', v) = e(u,v) \cdot e(u',v) \qquad and \qquad e(u, v \cdot v') = e(u,v) \cdot e(u',v)
-				$$
+				\end{equation}
 				
 			\item non-degenerate: $e(g_0, g_1)$ is a generator of $\Gt$
 		\end{enumerate}
 		
-	When $\Gzero = \Gone$, we say that the pairing is a \textbf{symmetric pairing}. When $\Gzero \neq \Gone$, we say that the pairing is an \textbf{asymmetric pairing}. We refer to $\Gzero$ and $\Gone$ as the \textbf{pairing groups}, or source groups, and refer to $\Gt$ as the \textbf{target group}.
+	\noindent When $\Gzero = \Gone$, we say that the pairing is a \textbf{symmetric pairing}. When $\Gzero \neq \Gone$, we say that the pairing is an \textbf{asymmetric pairing}. We refer to $\Gzero$ and $\Gone$ as the \textbf{pairing groups}, or source groups, and refer to $\Gt$ as the \textbf{target group}.
 \end{definition}
 
 \paragraph{} From the bilinear property, we can derive the following equality which is central to our scheme:
@@ -34,7 +34,7 @@
 	\forall \alpha, \beta \in \mathbb{Z}_q, \; e({g_0}^\alpha, {g_1}^\beta) = e({g_0}, {g_1})^{\alpha\beta} =e({g_0}^\beta, {g_1}^\alpha)
 \end{equation}
 
-\paragraph{Hard Problems in Pairing Groups --} The existence of pairings has direct consequences on the discrete logarithm, the decisional Diffie-Hellman (DDH) and the computational Diffie-Hellman (CDH) assumptions. We summarise these in \autoref{table:problems} below.
+\paragraph{Hard Problems in Pairing Groups --} The existence of pairings has direct consequences on the discrete logarithm, the decisional Diffie-Hellman (DDH) and the computational Diffie-Hellman (CDH) assumptions. Most notably, the existence of a symmetric pairing on $\Gzero$ provides a simple solution to the decisional Diffie Hellman problem. We summarise the effect of pairings on tradition cryptographic assumptions in \autoref{table:problems} below.
 
 \begin{table}[H]
 	\begin{center}
@@ -53,7 +53,7 @@
   \end{center}
 \end{table}
 
-\noindent There exist variants of the DDH and CDH assumptions that take into account the pairing operation: the decisional variant is known as the decision Bilinear Diffie-Hellman (DBDH) assumption and the computational variant is known as the co-Computational Diffie-Hellman (co-CDH) assumption. We provide formal definitions for both of the assumptions in \autoref{ap:coCDH}.
+\paragraph{} There exist variants of the DDH and CDH assumptions that take into account the pairing operation: the decisional variant is known as the \textit{decision Bilinear Diffie-Hellman} (DBDH) assumption and the computational variant is known as the \textit{co-Computational Diffie-Hellman} (co-CDH) assumption. We provide formal definitions for both of the assumptions in \autoref{ap:coCDH}.
 
 %TODO ref for implementation
 \paragraph{Implementation --} Pairings have been implemented in practice on certain pairing-friendly elliptic curves. While the underlying constructions are outside of the scope of this project, we wish to emphasise a few of their features. In asymmetric pairings, the group $\Gzero$ is usually built upon a finite field, while groups $\Gone$ and $\Gt$ are built on extensions of that field \cite{BonehShoup}. This implies that elements in $\Gzero$ have a shorter representation than those in $\Gone$ or $\Gt$. Furthermore, operations in $\Gzero$ are less computationally intensive. Finally, a pairing operation is much more computationally intensive than exponentiation in any of the three groups \cite{BonehShoup}.
@@ -64,7 +64,7 @@
 
 
 \begin{definition}[BLS Signatures \cite{BLS}]
-	A BLS signature scheme $\mathcal{S}_{BLS}$ is composed of three efficient algorithms $\Keygen, \Sign, \Verif$. Let $\Gzero, \Gone, \Gt$ be three cyclic groups of prime order $q$ such that there exists a pairing $e : \Gzero \times \Gone \rightarrow \Gt$. $g_0 \in \Gzero$ and $g_1 \in \Gone$ are generators. Let $H_0$ a cryptographic hash function defined as $H_0: \{0,1\}^* \rightarrow \mathbb{G}_0$, and ``$\sample$'' denote the ``choose uniformly at random'' operator, we define the three algorithms as:
+	A BLS signature scheme $\mathcal{S}_{BLS}$ is composed of three efficient algorithms $\Keygen, \Sign, \Verif$. Let $\Gzero, \Gone, \Gt$ be three cyclic groups of prime order $q$, with security parameter $\lambda$, such that there exists a pairing $e : \Gzero \times \Gone \rightarrow \Gt$. $g_0 \in \Gzero$ and $g_1 \in \Gone$ are generators. Let $H_0$ a cryptographic hash function defined as $H_0: \{0,1\}^* \rightarrow \mathbb{G}_0$, and ``$\sample$'' denote the ``choose uniformly at random'' operator, we define the three algorithms as:
 	\begin{quote}
 		$\Keygen:$ Choose uniformly at random $x \sample \mathbb{Z}_q^* $ and set the secret key $\sk \leftarrow x$ and the public key $\pk \leftarrow {g_1}^x$. Output $\sk$ to the message signer and $\pk$ to the receiver. \\
 		$\Sign(\sk, m)$: Output the signature $\sigma = H_0(m)^\sk$. \\
@@ -73,8 +73,8 @@
 
 \end{definition} 
 
-\begin{theorem}[Security of BLS Signatures \cite{BonehShoup}] \label{th:blsforge}
-	Let $e : \Gzero \times \Gone \rightarrow \Gt$ be a pairing, let $\mathcal{M}$ be the message space and let $H: \mathcal{M} \rightarrow \Gzero$ be a hash function. Then the derived BLS signature scheme is \textbf{existentially unforgeable under chosen message attacks} assuming the co-Computational Diffie-Hellman assumption\footnote{see \autoref{ap:coCDH}} holds for $e$, and $H$ is modelled as a random oracle.
+\begin{theorem}[EUF-CMA Security of BLS Signatures \cite{BonehShoup}] \label{th:blsforge}
+	Let $e : \Gzero \times \Gone \rightarrow \Gt$ be a pairing, let $\mathcal{M}$ be the message space and let $H: \mathcal{M} \rightarrow \Gzero$ be a hash function. Then the derived BLS signature scheme is \textbf{existentially unforgeable under chosen message attacks} (EUF-CMA) assuming the co-Computational Diffie-Hellman assumption\footnote{see \autoref{ap:coCDH}} holds for $e$, and $H$ is modelled as a random oracle.
 \end{theorem} 
 
 \paragraph{} Blind and/or threshold variants of this scheme exist. The former allows to hide the original message from the signer, while the latter allows to hide the complete signature from any individual (non-colluding) signer. We define a blind $(t,n)$-threshold BLS signature scheme below. Once again, we only present the variant in which signatures are elements of $\Gzero$ and public keys are elements of $\Gone$. 
@@ -82,7 +82,7 @@
 \begin{definition}[Blind $(t,n)$-threshold BLS Signature]\label{def:BTBLS} A blind $(t,n)$-threshold BLS signature scheme $\mathcal{S}_{BTBLS}$ is composed of six algorithms $\Keygen$, $\Blind$, $\Sign$, $\Combine$, $\Unblind$, $\Verif$. Let $\Gzero, \Gone, \Gt$ be three cyclic groups of prime order $q$ such that there exists a pairing $e : \Gzero \times \Gone \rightarrow \Gt$. $g_0 \in \Gzero$ and $g_1 \in \Gone$ are generators. Let $H_0$ a cryptographic hash function defined as $H_0: \{0,1\}^* \rightarrow \mathbb{G}_0$, we define the six algorithms as:
 	
 	\begin{quote}
-		$\Keygen:$ $n$ participants $P_1, P_2, \dots, P_n$ jointly execute a $(t,n)$ distributed key generation algorithm to compute secret key shares $\sk_1, \sk_2, \dots, \sk_n$ and public key $\pk$. Output $\sk_i$ and $\pk$ to $P_i$ and $\pk$ to the message receiver.\\
+		$\Keygen(\lambda):$ $n$ participants $P_1, P_2, \dots, P_n$ jointly execute a $(t,n)$-distributed key generation algorithm with security parameter $\lambda$ to compute secret key shares $\sk_1, \sk_2, \dots, \sk_n$ and public key $\pk$. Output $\sk_i$ and $\pk$ to $P_i$ and $\pk$ to the message receiver.\\
 		$\Blind(m)$: Choose uniformly at random $\alpha \sample \mathbb{Z}_q$. Output $\sigma_\alpha \leftarrow H_0(m)^\alpha$ and $\alpha$. \\
 		$\Sign(\sk_i, \sigma_\alpha)$: Output the signature $\widehat{\sigma_i} \leftarrow {\sigma_\alpha}^{\sk_i}$. \\
 		$\Combine(\widehat{\sigma_{j_1}}, \widehat{\sigma_{j_2}}, \dots, \widehat{\sigma_{j_t}})$: Use Lagrange interpolation on a subset of $t$ blinded partialn signatures $\widehat{\sigma_{j_1}}, \widehat{\sigma_{j_2}}, \dots, \widehat{\sigma_{j_t}}$ to recover the full blinded signature $\widehat \sigma$. \\
@@ -97,10 +97,10 @@
 
 \section{Left/Right constrained pseudorandom functions}
 
-\paragraph{} Left/right constrained pseudorandom functions were first introduced by Boneh and Waters \cite{LRPRF}. These pseudorandom functions (PRFs) are evaluated over a pair of inputs $x,y$ with a random key $k$ -- we denote the output value as $F(k, (x,y))$. These functions can then be ``constrained'' to their left or their right input using \textit{constraining keys}: knowing the left constraining key for a specific value $w$ allows to compute $F(k, (w,\cdot))$ at all points $(w, \cdot)$ with no knowledge of $k$. Similarly, the right constraining key for a value $w$ allows to compute $F(k, (\cdot,w))$ at all points $(\cdot,w)$ with no knowledge of $k$. Left/right constrained PRFs are formally defined in \cite{LRPRF} as:
+\paragraph{} Left/right constrained pseudorandom functions were first introduced by Boneh and Waters \cite{LRPRF}. These pseudorandom functions (PRFs) are evaluated over a pair of inputs $x,y$ with a random key $k$ -- we denote the output value as $F(k, (x,y))$ or $F_k(x,y)$. These functions can then be ``constrained'' to their left or their right input using \textit{constraining keys}: knowing the left constraining key for a specific value $w$ allows to compute $F(k, (w,\cdot))$ at all points $(w, \cdot)$ with no knowledge of $k$. Similarly, the right constraining key for a value $w$ allows to compute $F(k, (\cdot,w))$ at all points $(\cdot,w)$ with no knowledge of $k$. Left/right constrained PRFs are formally defined in \cite{LRPRF} as:
 
 \begin{definition}[Left/right constrained PRF \cite{LRPRF}]
-	Let $F: \mathcal{K} \times \mathcal{X}^2 \rightarrow \mathcal{Y}$ be a PRF. For all $w \in \mathcal{X}$ we wish to support constrained keys $k_{w, \mathrm{LEFT}}$ that enable the evaluation of $F(k, (x,y))$ at all points $(w,y)\in \mathcal{X}^2$, that is, at all points in which the left side is fixed to $w$. In addition, we want constrained keys $k_{w,\mathrm{RIGHT}}$ that fix the right hand side of $(x,y)$ to $w$. More precisely, for an element $w \in \mathcal{X}$ define the two predicates $p_w^{(L)}, p_w^{(R)}: \mathcal{X}^2 \rightarrow \{0,1\}$ as
+	Let $F: \mathcal{K} \times \mathcal{X}^2 \rightarrow \mathcal{Y}$ be a PRF with security parameter $\lambda$. For all $w \in \mathcal{X}$ we wish to support constrained keys $k_{w, \mathrm{LEFT}}$ that enable the evaluation of $F(k, (x,y))$ at all points $(w,y)\in \mathcal{X}^2$, that is, at all points in which the left side is fixed to $w$. In addition, we want constrained keys $k_{w,\mathrm{RIGHT}}$ that fix the right hand side of $(x,y)$ to $w$. More precisely, for an element $w \in \mathcal{X}$ define the two predicates $p_w^{(L)}, p_w^{(R)}: \mathcal{X}^2 \rightarrow \{0,1\}$ as
 	
 	$$
 		p_w^{(L)}(x,y) = 1 \iff x = w \quad \mathrm{and} \quad p_w^{(R)}(x,y) = 1 \iff y = w 
@@ -116,7 +116,7 @@
 \paragraph{Security -- } We now provide the definition of a secure left/right constrained PRF by adapting a more general definition provided in \cite{LRPRF}.
 
 		\begin{secgame}[\cite{LRPRF}] \label{att:lrPRF}
-		Let $F: \mathcal{K} \times \mathcal{X}^2 \rightarrow \mathcal{Y}$ be a left-right constrained PRF with respect to a set system $\mathcal{S} \subseteq 2^{\mathcal{X}^2}$. We define constrained security using the following two experiments denoted $\Exp{0}$ and $\Exp{1}$ with an adversary $\adv$. For $b=0,1$ experiment $\Exp{b}$ proceeds as follows:
+		Let $F: \mathcal{K} \times \mathcal{X}^2 \rightarrow \mathcal{Y}$ be a left-right constrained PRF with respect to a set system $\mathcal{S} \subseteq 2^{\mathcal{X}^2}$ and security parameter $\lambda$. We define constrained security using the following two experiments denoted $\Exp{0}$ and $\Exp{1}$ with an adversary $\adv$. For $b=0,1$ experiment $\Exp{b}$ proceeds as follows:
 
 			A random key $k \in \mathcal{K}$ is selected and two helper sets $C,V \subseteq \mathcal{X}^2$ are initialised to $\emptyset$. The set $V \subseteq \mathcal{X}^2$ will keep track of all the points at which the adversary can evaluate $F(k, (\cdot,\cdot))$. The set $C \subseteq \mathcal{X}^2$ will keep track of all the points where the adversary has challenged. The sets $C$ and $V$ will ensure that the adversary cannot trivially decide whether challenge values are random or pseudorandom. In particular, the experiments maintain the invariant that $C \cap V = \emptyset$.
 
@@ -124,7 +124,7 @@ The adversary is then presented with three oracles as follows:
 
 \begin{itemize}
 	\item $F.\mathsf{eval}(x,y)$: given $(x,y) \in \mathcal{X}^2$ from $\adv$ if $(x,y) \notin C$ the oracle returns $F(k, (x,y))$ and otherwise returns $\bot$. The set $V$ is updated as $V\leftarrow V \cup \{(x,y)\}$.
-	\item $F.\mathsf{constrain}(w,d)$: given a coordinate $w \in \mathcal{X}$ and a direction $d \in \{LEFT,RIGHT\}$ from $\adv$ we define $S$ as the set of all points $p$ such that $p = (w, \cdot)$ if $d=LEFT$ or $p = (\cdot, w)$ if $d=RIGHT$. If $S\cap C= \emptyset$ the oracle returns the constraining key $k_{w, d}$. The set $V$ is updated $V\leftarrow V \cup S$.
+	\item $F.\mathsf{constrain}(w,d)$: given a coordinate $w \in \mathcal{X}$ and a direction $d \in \{LEFT,RIGHT\}$ from $\adv$ we define $S$ as the set of all points $p$ such that $p = (w, \cdot)$ if $d=LEFT$ or $p = (\cdot, w)$ if $d=RIGHT$. If $S\cap C= \emptyset$ the oracle returns the constraining key $k_{w, d}$ and the set $V$ is updated $V\leftarrow V \cup S$. Otherwise, the oracle returns $\bot$.
 	\item $\mathsf{Challenge}(x,y)$: given $(x,y)\in \mathcal{X}^2$ where $(x,y) \notin V$, if $b=0$ the adversary is given $F(k, (x,y)))$; otherwise the adversary is given a random (consistent) $z \in \mathcal{Y}$. The set $C$ is updated $C \leftarrow C \cup \{(x,y)\}$.
 \end{itemize}
 			Once the adversary is done interrogating the oracles, it outputs $b' \in \{0,1\}$.\\
@@ -136,7 +136,7 @@ The adversary is then presented with three oracles as follows:
 		
 		\noindent When experiences EXP(0) and EXP(1) are performed equally many times, an equivalent definition for the adversary's advantage is $\mathrm{AdvPRF_{\adv, F}}(\lambda) = \abs{\frac{1}{2} - \Pr[b' = b]}$. Indeed, using the law of total probability:
 		\begin{align}
-				\mathrm{AdvPRF_{\adv, F}} &= \abs{\mathrm{Pr}[W_0] - \mathrm{Pr}[W_1]} \\
+				\mathrm{AdvPRF_{\adv, F}}(\lambda) &= \abs{\mathrm{Pr}[W_0] - \mathrm{Pr}[W_1]} \\
 				&= \abs{\Pr[b' = 1 \land b=0] - \Pr[b' = 1 \land b=1]} \\
 				&= \abs{\Pr[b' = 1 \land b=0] - \left(\Pr[b' = b] - \Pr[b' = 0 \land b=0] \right)} \\
 				&= \abs{\Pr[b' = 1 \land b=0] + \Pr[b' = 0 \land b=0] - \Pr[b' = b]}\\
@@ -147,11 +147,11 @@ The adversary is then presented with three oracles as follows:
 		\begin{definition}[Secure left/right constrained PRF \cite{LRPRF}]
 		\label{def:lrPRFsec}
 			The PRF $F$ is a secure constrained PRF with respect to $\mathcal{S}$ if for all probabilistic
-polynomial time adversaries $\adv$ the function $\mathrm{AdvPRF}_{\adv,F}(\lambda)$ is negligible.
+polynomial time adversaries $\adv$ the function $\mathrm{AdvPRF}_{\adv,F}(\lambda)$ is negligible in $\lambda$.
 		\end{definition}
 
 
-\paragraph{Implementation --} \label{leftright} Boneh and Waters \cite{LRPRF} present a secure left/right constrained PRF construction under the random oracle model by making use of a symmetric pairing. Here we present a variant that makes use of asymmetric pairings. Let $\Gzero, \Gone, \Gt$ be three cyclic groups of prime order $q$ such that there exists a pairing $e : \Gzero \times \Gone \rightarrow \Gt$. Let $H_0: \{0,1\}^* \rightarrow \Gzero$ and $H_1: \{0,1\}^* \rightarrow \Gone$ be two hash functions modelled as random oracles. For a random key $k$, we define the left/right constrained PRF $F$ as:
+\paragraph{Implementation --} \label{leftright} Boneh and Waters \cite{LRPRF} present a secure left/right constrained PRF construction under the random oracle model by making use of a symmetric pairing. Here we present a variant that makes use of an asymmetric pairing. Let $\Gzero, \Gone, \Gt$ be three cyclic groups of prime order $q$ such that there exists a pairing $e : \Gzero \times \Gone \rightarrow \Gt$. Let $H_0: \{0,1\}^* \rightarrow \Gzero$ and $H_1: \{0,1\}^* \rightarrow \Gone$ be two hash functions modelled as random oracles. For a random key $k$, we define the left/right constrained PRF $F$ as:
 \begin{equation}
 	\label{eq:LRPRF}
 	F(k, (x,y)) = e(H_0(x), H_1(y))^k
