added references for timing table

--- a/references.bib
+++ b/references.bib
@@ -112,10 +112,26 @@ title = {Attack Trees},
 howpublished = {\textit{Dr. Dobb's Journal}},
 month = {December},
 year = {1999},
-note = {Retrived online from \url{https://www.schneier.com/academic/archives/1999/12/attack_trees.html}}
+note = {Retrieved online from \url{https://www.schneier.com/academic/archives/1999/12/attack_trees.html}}
 }
 
 
 
+@misc {MCLLib,
+author = {Shigeo Mitsunari},
+title = {{MCL}: a portable and fast pairing-based cryptography library},
+howpublished = {\url{https://github.com/herumi/mcl}},
+month = {June},
+year = {2020},
+note = {Last visited on 5 Sept. 2020}
+}
 
+@misc {MCLBench,
+author = {Shigeo Mitsunari},
+title = {{MCL} benchmarks},
+howpublished = {\url{https://github.com/herumi/mcl/blob/master/bench.txt}},
+month = {June},
+year = {2020},
+note = {Last visited on 5 Sept. 2020}
+}
 
