--- a/tables/pairing_benchmarks.tex
+++ b/tables/pairing_benchmarks.tex
@@ -24,7 +24,7 @@
 %		GT::sqr               & 0.014 & 0.026  & 0.04   \\
 %		GT::inv               & 0.074 & 0.131  & 0.19  
 		\end{tabular}
-		\caption{Timing benchmarks for elliptic curve operations over three curves (BN254, BN381\_1 and BN462) executed on an iPhone 7 running iOS 11.2.1. All timings are given in milliseconds. \cite{MCLBench}}
+		\caption{Timing benchmarks for elliptic curve operations over three pairing-friendly curves (BN254, BN381\_1 and BN462) executed on an iPhone 7 running the MCL library \cite{MCLLib} on iOS 11.2.1. All timings are given in milliseconds. \cite{MCLBench}}
 		\label{table:benchmarks}
 	\end{center}
 \end{table}
